# tita_rl

./: pyproject.toml
configs/: base_config.py  legged_robot_config.py  tita_flat_config.py  tita_rough_config.py
envs/: legged_robot.py
resources/tita/urdf/: tita_description.urdf
runner/: on_constraint_policy_runner.py
utils/: task_registry.py
